tests/spec/non_conformant/errors/fn_varargs/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/fn-varargs"

#[allow(unused)]
use super::runner;

mod at_start;

mod multiple;

mod with_default;

mod with_optional;
